--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scrollable-anchor": "^0.6.1",
+    "react-sticky-header": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
